valid manifest files automatically; genomics samples still needs work

--- a/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
+++ b/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
+    "import glob\n",
     "import cmc_submit2ndar as cmc\n",
     "syn = synapseclient.login()"
    ]
@@ -1391,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1445,7 @@
        "      <td>NDAR_INV3F2A6YAC</td>\n",
        "      <td>CMC_MSSM_106</td>\n",
        "      <td>1080</td>\n",
-       "      <td>4/13/18</td>\n",
+       "      <td>2018-04-13</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>NaN</td>\n",
@@ -1468,7 +1469,7 @@
        "      <td>NDAR_INV3F2A6YAC</td>\n",
        "      <td>CMC_MSSM_106</td>\n",
        "      <td>1080</td>\n",
-       "      <td>4/13/18</td>\n",
+       "      <td>2018-04-13</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>NaN</td>\n",
@@ -1492,7 +1493,7 @@
        "      <td>NDAR_INV3F2A6YAC</td>\n",
        "      <td>CMC_MSSM_106</td>\n",
        "      <td>1080</td>\n",
-       "      <td>4/13/18</td>\n",
+       "      <td>2018-04-13</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
        "      <td>NaN</td>\n",
@@ -1518,9 +1519,9 @@
       ],
       "text/plain": [
        "          subjectkey src_subject_id  interview_age interview_date gender  \\\n",
-       "55  NDAR_INV3F2A6YAC   CMC_MSSM_106           1080        4/13/18      F   \n",
-       "56  NDAR_INV3F2A6YAC   CMC_MSSM_106           1080        4/13/18      F   \n",
-       "57  NDAR_INV3F2A6YAC   CMC_MSSM_106           1080        4/13/18      F   \n",
+       "55  NDAR_INV3F2A6YAC   CMC_MSSM_106           1080     2018-04-13      F   \n",
+       "56  NDAR_INV3F2A6YAC   CMC_MSSM_106           1080     2018-04-13      F   \n",
+       "57  NDAR_INV3F2A6YAC   CMC_MSSM_106           1080     2018-04-13      F   \n",
        "\n",
        "     race  ethnic_group  grade_highed  disorder  cdeathoff  ...  mskelzyn  \\\n",
        "55  White           NaN           NaN       NaN        NaN  ...       NaN   \n",
@@ -1540,7 +1541,7 @@
        "[3 rows x 236 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
