Progress with genomics samples

--- a/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
+++ b/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
        "[3 rows x 236 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1607,7 @@
        "      <th>10</th>\n",
        "      <td>NDAR_INV3F2A6YAC</td>\n",
        "      <td>CMC_MSSM_106</td>\n",
-       "      <td>4/13/18</td>\n",
+       "      <td>2018-04-13</td>\n",
        "      <td>1080</td>\n",
        "      <td>F</td>\n",
        "      <td>White</td>\n",
@@ -1618,10 +1618,10 @@
        "      <td>...</td>\n",
        "      <td>Yes</td>\n",
        "      <td>MSSM_106.DLPFC_1399.np1</td>\n",
-       "      <td>PFC</td>\n",
+       "      <td>brain</td>\n",
        "      <td>MSBB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>CMC_MSSM_106</td>\n",
+       "      <td>CMC_MSSM_106</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1634,16 +1634,16 @@
       ],
       "text/plain": [
        "          subjectkey src_subject_id interview_date  interview_age gender  \\\n",
-       "10  NDAR_INV3F2A6YAC   CMC_MSSM_106        4/13/18           1080      F   \n",
+       "10  NDAR_INV3F2A6YAC   CMC_MSSM_106     2018-04-13           1080      F   \n",
        "\n",
        "     race  ethnic_group phenotype phenotype_description twins_study  ...  \\\n",
        "10  White           NaN   control                    No          No  ...   \n",
        "\n",
        "   sample_taken       sample_id_original  sample_description  biorepository  \\\n",
-       "10          Yes  MSSM_106.DLPFC_1399.np1                 PFC           MSBB   \n",
+       "10          Yes  MSSM_106.DLPFC_1399.np1               brain           MSBB   \n",
        "\n",
        "    patient_id_biorepository  sample_id_biorepository  cell_id_original  \\\n",
-       "10                       NaN                      NaN               NaN   \n",
+       "10              CMC_MSSM_106             CMC_MSSM_106               NaN   \n",
        "\n",
        "    cell_id_biorepository  adi_dx  ados_dx  \n",
        "10                    NaN     NaN      NaN  \n",
@@ -1651,7 +1651,7 @@
        "[1 rows x 34 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,107 +1662,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subjectkey</th>\n",
-       "      <th>experiment_id</th>\n",
-       "      <th>src_subject_id</th>\n",
-       "      <th>interview_age</th>\n",
-       "      <th>interview_date</th>\n",
-       "      <th>sample_description</th>\n",
-       "      <th>sample_id_original</th>\n",
-       "      <th>organism</th>\n",
-       "      <th>sample_amount</th>\n",
-       "      <th>sample_unit</th>\n",
-       "      <th>...</th>\n",
-       "      <th>patient_id_biorepository</th>\n",
-       "      <th>sample_id_biorepository</th>\n",
-       "      <th>cell_id_original</th>\n",
-       "      <th>cell_id_biorepository</th>\n",
-       "      <th>comments_misc</th>\n",
-       "      <th>site</th>\n",
-       "      <th>rat280</th>\n",
-       "      <th>rat230</th>\n",
-       "      <th>gqn</th>\n",
-       "      <th>seq_batch</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NDAR_INV3F2A6YAC</td>\n",
-       "      <td>1111</td>\n",
-       "      <td>CMC_MSSM_106</td>\n",
-       "      <td>1080</td>\n",
-       "      <td>4/13/18</td>\n",
-       "      <td>PFC</td>\n",
-       "      <td>MSSM_106.DLPFC_1399.np1</td>\n",
-       "      <td>human</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NA</td>\n",
-       "      <td>...</td>\n",
-       "      <td>CMC_MSSM_106</td>\n",
-       "      <td>MSSM_DNA_TMPR_69087</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         subjectkey  experiment_id src_subject_id interview_age  \\\n",
-       "0  NDAR_INV3F2A6YAC           1111   CMC_MSSM_106          1080   \n",
-       "\n",
-       "  interview_date sample_description       sample_id_original organism  \\\n",
-       "0        4/13/18                PFC  MSSM_106.DLPFC_1399.np1    human   \n",
-       "\n",
-       "   sample_amount sample_unit  ... patient_id_biorepository  \\\n",
-       "0              1          NA  ...             CMC_MSSM_106   \n",
-       "\n",
-       "  sample_id_biorepository cell_id_original cell_id_biorepository  \\\n",
-       "0     MSSM_DNA_TMPR_69087              NaN                   NaN   \n",
-       "\n",
-       "  comments_misc site rat280 rat230  gqn seq_batch  \n",
-       "0           NaN  NaN    NaN    NaN  NaN       NaN  \n",
-       "\n",
-       "[1 rows x 32 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gsam"
    ]
