--- a/notebook/2019-02-15-mix-fastqs-to-synapse/2019-02-15-mix-fastqs-to-synapse.ipynb
+++ b/notebook/2019-02-15-mix-fastqs-to-synapse/2019-02-15-mix-fastqs-to-synapse.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,13 +35,13 @@
    "source": [
     "The function below does the following things:\n",
     "\n",
-    "1. Get the pathnames of all FASTQs for a given sample (Mix1 or Mix3); this is based on `*-fastq-names`\n",
+    "1. Get the pathnames of all FASTQs for a given sample (Mix1, Mix2 or Mix3); this is based on `*-fastq-names`\n",
     "1. Given those pathnames upload FASTQs to a Synapse folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stored_files = {s: store_sample(sample=s, parent=parent) for s in (\"Mix1A\", \"Mix3A\")}"
+    "stored_files = {s: store_sample(sample=s, parent=parent) for s in (\"Mix1A\", \"Mix2A\", \"Mix3A\")}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -120,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
