--- a/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
+++ b/notebook/2019-02-19-upload-to-ndar/2019-02-19-upload-to-ndar.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotating, validating, and uploading FASTQ and BAM files to NDAR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,13 +15,6 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Uploading FASTQ and BAM files to NDAR"
    ]
   },
   {
@@ -3198,7 +3198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
