prepare4prec-recall: prepare a VCF for prec--recall calculations

--- a/notebook/2019-03-18-truth-sets/2019-03-18-truth-sets.ipynb
+++ b/notebook/2019-03-18-truth-sets/2019-03-18-truth-sets.ipynb
@@ -345,14 +345,14 @@
     "1. `illumina/NA128{89,90,91,92}.vcf.gz`\n",
     "\n",
     "procedures\n",
-    "1. *PASS* filter (2 * 4 VCFs)\n",
-    "1. spit multiallelic into biallelic records (2 * 4 VCFs)\n",
+    "1. *PASS* filter ($2 \\times 4$ VCFs)\n",
+    "1. spit multiallelic into biallelic records ($2 \\times 4$ VCFs)\n",
     "1. take union of `chesslab/NA12889.vcf.gz` with `illumina/NA12889.vcf.gz`\n",
     "    * Previously we used intersection.  But since we already apply PASS filtering intersection doesn't seem ideal because it removes further records many of which are real variants. Qualitatively speaking, union compensates for the loss of real variants with PASS filter while intersection causes further loss of real variants.\n",
     "    * the output is one set of 4 VCFs\n",
-    "1. filter each VCF for SNPs or indels resulting in 2 * 4 VCFs\n",
-    "1. filter for GT=RA or GT=AA resulting in 2 * 2 * 4 VCFs\n",
-    "1. take set partitions resulting in 80 * 2 VCFs"
+    "1. filter each VCF for SNPs or indels resulting in $2 \\times 4$ VCFs\n",
+    "1. filter for GT=RA or GT=AA resulting in $2 \\times 2 \\times 4$ VCFs\n",
+    "1. take set partitions resulting in $80\\times 2$ VCFs"
    ]
   },
   {
