Corrected NA12892 sample name; progress with truth-set

--- a/notebook/2018-07-31-ceph-gp-variants/2018-07-31-ceph-gp-variants.ipynb
+++ b/notebook/2018-07-31-ceph-gp-variants/2018-07-31-ceph-gp-variants.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "### On attila-ThinkS\n",
     "\n",
-    "I created the following symlinks to the VCFs mentioned above the following paths:\n",
+    "I created the following symlinks (or in the case of NA12892 a copy; for explanation read below) to the VCFs mentioned above the following paths:\n",
     "```\n",
     "$ ls -1 ~/projects/bsm/results/calls/ceph-utah/chesslab/\n",
     "NA12889.vcf.gz\n",
@@ -43,6 +43,8 @@
     "NA12891.vcf.gz\n",
     "NA12892.vcf.gz\n",
     "```\n",
+    "NA12892 required a slight modification: its sample had to be renamed from Mix3A to NA12892 before copying it to the directory.  This is all impemented by `notebook/2018-07-31-ceph-gp-variants/NA12892-correct-sample-name`.\n",
+    "\n",
     "The comparable VCFs from Illumina's own sequencing and variant calling are the ones that had been remapped from GRCh38 to GRCh37.  Symlinks to these can be found here:\n",
     "\n",
     "```\n",
