printing the entire gt_of_aaf mapping

--- a/notebook/2019-03-12-prec-recall-design/2019-03-12-prec-recall-design.ipynb
+++ b/notebook/2019-03-12-prec-recall-design/2019-03-12-prec-recall-design.ipynb
@@ -299,11 +299,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aaf_of_gt = jgc.get_aaf_of_gt()"
+    "aaf_of_gt = jgc.get_aaf_of_gt()\n",
+    "# write to csv\n",
+    "aaf_of_gt.to_csv('/home/attila/projects/bsm/results/2019-03-12-prec-recall-design/aaf_of_gt.csv')"
    ]
   },
   {
