Models of nvar and aaf

--- a/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
+++ b/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "import os\n",
     "import joint_gt_ceph as jgc\n",
     "import truth_sets_aaf as tsa\n",
-    "import downsize_truthset as dsts"
+    "import downsize_truthset as dsts\n",
+    "import somaticvar_models as svm"
    ]
   },
   {
@@ -235,36 +236,240 @@
     "\n",
     "If the function is decreasing it means that we believe that most somatic mutations arose relatively late so that they didn't have the opportunity to spread out to larger mosaic areas.\n",
     "\n",
-    "Excluding $\\{0.5\\}$ means that we use the simplifying assumption that if a variant has AAF it means it can only be a germline variant for which the individual is heterozygous.  Thus any call of *somatic* variants at $\\mathrm{AAF}=0.5$ will be considered false even if we consider *somatic* variants at $\\mathrm{AAF}=0.5$\n",
+    "Excluding $\\{0.5\\}$ means that we use the simplifying assumption that if a variant has AAF it means it can only be a germline variant for which the individual is heterozygous.  Thus any call of *somatic* variants at $\\mathrm{AAF}=0.5$ will be considered false even if we allow some somatic variants at, say, $\\mathrm{AAF}=0.52$.\n",
     "\n",
-    "## The models\n",
+    "## Modeling the number of somatic variants\n",
     "\n",
-    "The number for germline SNPs in an \"average\" human is 4.5 million based on [common knowledge](https://ghr.nlm.nih.gov/primer/genomicresearch/snp); my recent analysis shows that this is consistent with the number of germline SNPs in NA12889.  The same analysis gave more that 0.7 million indels for NA12889."
+    "We will consider two aspects for building models\n",
+    "1. the total number of somatic variants\n",
+    "1. the number of somatic variants as a function of AAF\n",
+    "\n",
+    "### The total number of somatic variants\n",
+    "\n",
+    "Let $Y$ denote the total number of somatic variants.  We will speculatively set $Y$ as a fixed fraction of the number of germline variants.\n",
+    "\n",
+    "To deal with germline variants we make use of the length of all autosomes and of chr22, which are obtained from `/big/data/refgenome/GRCh37/hs37d5/hs37d5.fa.fai`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "germ_vars = {'snp': 4.5e6, 'indel': 0.8e6}"
+    "hs37d5_len = {'autosomes': 2929051733, '22': 51304566}"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The length of all autosomes and of chr22 is obtained from `/big/data/refgenome/GRCh37/hs37d5/hs37d5.fa.fai`."
+    "The number for germline SNPs in an \"average\" human is 4.5 million based on [common knowledge](https://ghr.nlm.nih.gov/primer/genomicresearch/snp); my recent analysis shows that this is consistent with the number of germline SNPs in NA12889.  The same analysis gave more that 0.7 million indels for NA12889."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>indel</th>\n",
+       "      <th>snp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>14012</td>\n",
+       "      <td>70063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>autosomes</th>\n",
+       "      <td>800000</td>\n",
+       "      <td>4000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            indel      snp\n",
+       "22          14012    70063\n",
+       "autosomes  800000  4000000"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hs37d5_len = {'autosomes': 2929051733, '22': 51304566}"
+    "germ_vars = {'snp': 4e6, 'indel': 0.8e6}\n",
+    "germ_vars = {k: [int(germ_vars[k] * hs37d5_len['22'] / hs37d5_len['autosomes']), int(germ_vars[k])] for k in germ_vars.keys()}\n",
+    "germ_vars = pd.DataFrame(germ_vars, index=hs37d5_len.keys())\n",
+    "germ_vars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If $G$ is the number of somatic variants (SNPs or indels in chr22 or all autosomes) then let\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "Y^{(1)} &=& 10^{-2} G \\\\\n",
+    "Y^{(2)} &=& 10^{-3} G \\\\\n",
+    "Y^{(3)} &=& 10^{-4} G\n",
+    "\\end{eqnarray}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "### The number of somatic variants as a function of AAF\n",
+    "\n",
+    "Let total number of somatic variants $Y\\equiv Y^{(k)}$ for some fixed $k\\in \\{1, 2, 3\\}$.  Then $Y = \\sum_{i=1}^{n} y_i$, where $\\{(y_i, x_i)\\}_{i=1,...,n}$ is the set of $n$ point pairs $(y_i, x_i)$ of somatic variant count $y_i$ and the corresponding alternative allele frequency $x_i$.\n",
+    "\n",
+    "$\\{x_i\\}_{i=1,...,n}$ are already given.  $Y$ will be given below.  The goal is to obtain $\\{y_i\\}_{i=1,...,n}$ under some simple mathematical model.\n",
+    "\n",
+    "## Models\n",
+    "\n",
+    "\n",
+    "### At a given total number of somatic variants \n",
+    "\n",
+    "For simplicity let's build a set $\\{M_j^{(k)}\\}_{j=1,2,3}$ of three models first at some fixed $k$ and use the simple notation $M_j\\equiv M_j^{(k)}$ as well as $Y\\equiv Y^{(k)}$.  Later we will extend this initial set of models to all possible $k\\in \\{1, 2, 3\\}$.\n",
+    "\n",
+    "We'll consider three models: $M_j,\\;j=1,2,3$.  Below is the general form of $M_j$\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "y_i = a_j + b_j x_i\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "Consequently\n",
+    "\\begin{equation}\n",
+    "Y = a_j n_j + b \\sum_{i=1}^{n_j} x_i\n",
+    "\\end{equation}\n",
+    "\n",
+    "What distinguishes the models is the relationship between $a_j$ and $b_j$ for each $j$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "b_j &=& - \\frac{a_j}{x_\\mathrm{max}^{(j)}}, \\; j=1,2 \\\\\n",
+    "b_3 &=& 0\n",
+    "\\end{eqnarray}\n",
+    "$$\n",
+    "\n",
+    "Thus in $M_1$ and $M_2$ the slope of the linear function is negative while in $M_3$ it is zero.  Distinguishing between $M_1$ and $M_2$ is $x_\\mathrm{max}^{(j)}$, the AAF at which the variant count becomes zero:\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "x_\\mathrm{max}^{(1)} &=& 50 \\\\\n",
+    "x_\\mathrm{max}^{(2)} &=& 100 \\\\\n",
+    "\\end{eqnarray}\n",
+    "$$\n",
+    "\n",
+    "Roughly speaking this means that\n",
+    "1. in $M_1$ the number of variants decreases steeply from $y=a_1$ at AAF of $0$ to $y=0$ at AAF of $50$\n",
+    "2. in $M_2$ the decrease is less steep: from $y=a_2 < a_1$ at AAF of $0$ to $y=0$ at AAF of $100$\n",
+    "3. in $M_3$ the number of variants is constant across $x_1,...,x_{n_3}$\n",
+    "\n",
+    "Note that $n_1 = n_3 > n_2$.\n",
+    "\n",
+    "The specifications above allow us to express $a_j$ with the known quantities as well as $x_\\mathrm{max}^{(j)}$\n",
+    "\n",
+    "$$\n",
+    "\\begin{eqnarray}\n",
+    "a_j &=& Y \\left( n_j - \\frac{1}{x_\\mathrm{max}^{(j)}} \\sum_{i=1}^{n_j} x_i \\right)^{-1}, \\; j=1,2 \\\\\n",
+    "a_3 &=& y_1 =...= y_{n_3} = Y n_3^{-1}\n",
+    "\\end{eqnarray}\n",
+    "$$\n",
+    "\n",
+    "### Extensions\n",
+    "\n",
+    "Extension of the three models described above to several total number of somatic variants is straight forward, yielding $3\\times 3 = 9$ models $\\{M_j^{(k)}:\\; j=1,2,3;\\; k=1,2,3\\}$.\n",
+    "\n",
+    "A further extension is to distinguish between SNPs and indels as well as between all autosomes and chr22, which gives $2\\times 2 \\times 9 = 36$ models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 6416.025641025641, 'b': -128.32051282051282}"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xset = nvariants.loc[(nvariants['sample'] == 'mix1') & (nvariants['vartype'] == 'snp'), 'aaf']\n",
+    "svm.get_yset(Y=germ_vars.at['22', 'snp'], xset=xset, x_max=50, return_params=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6159.384615384615,\n",
+       " 5902.74358974359,\n",
+       " 5646.1025641025635,\n",
+       " 5389.461538461538,\n",
+       " 5132.820512820513,\n",
+       " 4876.179487179486,\n",
+       " 4619.538461538461,\n",
+       " 4362.897435897436,\n",
+       " 4106.25641025641,\n",
+       " 3849.6153846153843,\n",
+       " 3592.9743589743584,\n",
+       " 3336.333333333333,\n",
+       " 3079.6923076923076,\n",
+       " 2823.0512820512818,\n",
+       " 1796.4871794871797,\n",
+       " 1539.8461538461534,\n",
+       " 1283.205128205128,\n",
+       " 1026.5641025641025,\n",
+       " 769.9230769230762,\n",
+       " 513.2820512820508,\n",
+       " 256.6410256410254]"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm.get_yset(Y=germ_vars.at['22', 'snp'], xset=xset, x_max=50, return_params=False)"
    ]
   },
   {
