Fixed the bug that imported non-somatic variants from Taejeong et al 2018

--- a/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
+++ b/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
@@ -666,7 +666,7 @@
    "source": [
     "tj_vaf = tsa.get_taejeongs_vaf(samples=['S316', 'S320'], scale2pct=True)\n",
     "y = tj_vaf\n",
-    "def my_distplot(sample,)\n",
+    "def my_distplot(sample, fit=None)\n",
     "sns.distplot(y[y['sample'] == 'S316']['VAF'], hist=True, rug=False, kde=False)"
    ]
   },
