exponential models started

--- a/notebook/2019-04-24-vaf-model-taejeong/2019-04-24-vaf-model-taejeong.ipynb
+++ b/notebook/2019-04-24-vaf-model-taejeong/2019-04-24-vaf-model-taejeong.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we create models of variant allele frequency (VAF) distribution based on the empirical VAF distribution from Taejeong Bae et al 2018 (Science 359 (6375), 550-555)."
+    "Here we inspect variant allele frequency (VAF) distribution from Taejeong Bae et al 2018 (Science 359 (6375), 550-555)."
    ]
   },
   {
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vaf_emp = tsa.get_taejeongs_vaf(samples=['S316', 'S320'], scale2pct=True)"
+    "vaf_emp = tsa.get_taejeongs_aaf(samples=['S316', 'S320'], scale2pct=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "['named-figure/tj-vaf-hist.png', 'named-figure/tj-vaf-hist.pdf']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -79,13 +79,13 @@
     }
    ],
    "source": [
-    "g = tsa.vaf_distplot(vaf_emp, fit=None)\n",
+    "g = tsa.aaf_distplot(vaf_emp, fit=None)\n",
     "attila_utils.savefig(g, 'tj-vaf-hist')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "lambda_hat  0.221052  0.235704  0.224425"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "['named-figure/tj-vaf-hist-expon.png', 'named-figure/tj-vaf-hist-expon.pdf']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "g = tsa.vaf_distplot(vaf_emp, fit=stats.expon)\n",
+    "g = tsa.aaf_distplot(vaf_emp, fit=stats.expon)\n",
     "attila_utils.savefig(g, 'tj-vaf-hist-expon')"
    ]
   },
