downsampling according to exp_model started

--- a/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
+++ b/notebook/2019-04-04-truth-sets-aaf/2019-04-04-truth-sets-aaf.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -699,13 +699,14 @@
        "4   10    533    0.2       -2  8000  autosomes   mix1   indel"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "expm = tsa.exp_model_df_concat(nvariants, log10s2gs=[-2, -3, -4], lambdas=[0.2, 0.04])\n",
+    "expm.to_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/exp_model.csv', index=False)\n",
     "expm.head()"
    ]
   },
@@ -899,15 +900,6 @@
    "source": [
     "fg = tsa.exp_model_plot0(expm, log10s2g=-3, region='chr22')\n",
     "attila_utils.savefig(fg, 'exp-model1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expm_test0 = tsa.exp_model_df(nvariants, region='chr22', sample='mix1', vartype='snp', log10s2g=-3, lam=0.2)"
    ]
   },
   {
