progress with truth set for exp_model

--- a/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
+++ b/notebook/2019-05-02-make-truth-sets/2019-05-02-make-truth-sets.ipynb
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "expm = pd.read_csv('~/projects/bsm/results/2019-04-04-truth-sets-aaf/exp_model.csv',\n",
-    "                   dtype={'lambda': 'category', 'region': 'category', 'sample': 'category', 'vartype': 'category'})"
+    "                   dtype={'lambda': 'category', 'region': 'category', 'sample': 'category', 'vartype': 'category', 'log10s2g': 'category'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -133,21 +133,21 @@
        "</div>"
       ],
       "text/plain": [
-       "      AAF  count lambda  log10s2g  ntot region sample vartype\n",
-       "1444    2     23    0.2        -3    70  chr22   mix1     snp\n",
-       "1445    4     15    0.2        -3    70  chr22   mix1     snp\n",
-       "1446    6     10    0.2        -3    70  chr22   mix1     snp\n",
-       "1447    8      6    0.2        -3    70  chr22   mix1     snp\n",
-       "1448   10      4    0.2        -3    70  chr22   mix1     snp"
+       "      AAF  count lambda log10s2g  ntot region sample vartype\n",
+       "1444    2     23    0.2       -3    70  chr22   mix1     snp\n",
+       "1445    4     15    0.2       -3    70  chr22   mix1     snp\n",
+       "1446    6     10    0.2       -3    70  chr22   mix1     snp\n",
+       "1447    8      6    0.2       -3    70  chr22   mix1     snp\n",
+       "1448   10      4    0.2       -3    70  chr22   mix1     snp"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sel_rows = (expm['lambda'] == '0.2') & (expm['log10s2g'] == -3) & (expm['region'] == 'chr22') & (expm['sample'] == 'mix1') & (expm['vartype'] == 'snp')\n",
+    "sel_rows = (expm['lambda'] == '0.2') & (expm['log10s2g'] == '-3') & (expm['region'] == 'chr22') & (expm['sample'] == 'mix1') & (expm['vartype'] == 'snp')\n",
     "df = expm.loc[sel_rows, :]\n",
     "df.head()"
    ]
